2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Move users_add_rule() from users.c to rules.c as rules_add_client_rule()
	which is far more suitable.

	* src/users.c (users_add_rule): Removed.

	* src/users.h: Remove proto accordingly.

	* src/rules.c (rules_add_client_rule): New.

	* src/rules.h: Add proto accordingly.

	* src/ntp_11.c (ntp_11_rules): Rename function call accordingly.

2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/auth.c, src/auth.h: Removed. This layer is not required
	anymore.

	* src/attack.c, src/comm.c, src/ntp_11.c, src/openvassd.c,
	src/sighand.c src/utils.c: Remove include of auth.h.

	* src/CMakeLists.txt: Remove handling of module auth.c.

	* COPYING: Remove module auth.

2013-06-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/openvassd.c (scanner_thread): Skip username/password part of OTP.
	Patch by Jan-Oliver Wagner.

2013-05-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/users.c (check_user): The file name is static, so
	don't use a variable anymore.

	* src/auth.c (auth_check_user): Ignore username and password,
	only dname is of interest. Therfore simplify code.

2013-05-31  Michael Wiegand <michael.wiegand@greenbone.net>

	Mark results of code analysis based on a number of valgrind runs.

	* src/pluginlaunch.c (process_internal_msg): Add TODO regarding
	possible memleak.

	* src/pluginscheduler.c (plugins_scheduler_init): Add TODO regarding
	possible memleak.

2013-05-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/users.c (check_user): Remove any handling of the user name,
	it isn't required anyway. Removed the parameter "user".

	* src/users.h: Removed now unused macro OPENVAS_MAX_USERNAME_LEN.
	Adjusted proto accordingly.

	* src/auth.c (auth_check_user): Adjust call of check_user.

2013-05-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Add support for determining if the