@@ -1,5 +1,10 @@
 2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* src/ntp_11.c (ntp_11_rules): Renamed variable user_rules to
+	client_rules which is more suitable.
+
+2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	Move users_add_rule() from users.c to rules.c as rules_add_client_rule()
 	which is far more suitable.
 
